maven-debian-helper (0.2) unstable; urgency=low

  UNRELEASED
  * Refactoring.
  * Add more goals: sysinstall, sysuninstall, resolve-none, resolve-compile,
    resolve-test, resolve-runtime.

 -- Torsten Werner <twerner@debian.org>  Sat, 20 Dec 2008 13:55:31 +0100

maven-debian-helper (0.1) unstable; urgency=low

  * Initial release. (Closes: #508511)

 -- Torsten Werner <twerner@debian.org>  Thu, 11 Dec 2008 20:06:35 +0100