@@ -87,6 +87,9 @@ under the License.
     <org.apache.maven.plugins.maven-surefire-plugin.version>
       2.4.3
     </org.apache.maven.plugins.maven-surefire-plugin.version>
+    <org.apache.maven.plugins.maven-war-plugin.version>
+      2.1-alpha-1
+    </org.apache.maven.plugins.maven-war-plugin.version>
   </properties>
 
   <build>
@@ -192,7 +195,7 @@ under the License.
          </plugin>
          <plugin>
            <artifactId>maven-war-plugin</artifactId>
-           <version>2.1-alpha-1</version>
+           <version>${org.apache.maven.plugins.maven-war-plugin.version}</version>
          </plugin>
        </plugins>
      </pluginManagement>
